--- a/metal/inventories/stag.yml
+++ b/metal/inventories/stag.yml
@@ -2,6 +2,6 @@ metal:
   children:
     masters:
       hosts:
-        proxmox0: {ansible_host: 192.168.1.169, mac: 'c2:f5:cf:1f:3e:c0', disk: sda, network_interface: ens18}
+        proxmox0: {ansible_host: 192.168.1.25, mac: '00:e0:24:24:92:5b', disk: sda, network_interface: enp4s0}
     workers:
       hosts: {}
