--- a/metal/inventories/prod.yml
+++ b/metal/inventories/prod.yml
@@ -1,15 +1,34 @@
 all:
   vars:
+    ansible_user: carlos
+    ansible_ssh_private_key_file: /home/carlos/.ssh/id_ed25519
     control_plane_endpoint: 192.168.1.8
     load_balancer_ip_pool:
       - 192.168.1.224/27
+
 metal:
   children:
     masters:
       hosts:
-        metal0: {ansible_host: 192.168.1.10, mac: 'BC:24:11:1C:E3:C0', disk: sda, network_interface: ens18}
-        metal1: {ansible_host: 192.168.1.11, mac: 'BC:24:11:EB:C2:7D', disk: sda, network_interface: ens18}
-        metal2: {ansible_host: 192.168.1.12, mac: 'BC:24:11:F7:CC:B8', disk: sda, network_interface: ens18}
+        metal0:
+          ansible_host: 192.168.1.10
+          mac: 'BC:24:11:1C:E3:C0'
+          disk: sda
+          network_interface: ens18
+        metal1:
+          ansible_host: 192.168.1.11
+          mac: 'BC:24:11:EB:C2:7D'
+          disk: sda
+          network_interface: ens18
+        metal2:
+          ansible_host: 192.168.1.12
+          mac: 'BC:24:11:F7:CC:B8'
+          disk: sda
+          network_interface: ens18
     workers:
       hosts:
-        metal3: {ansible_host: 192.168.1.13, mac: 'BC:24:11:2D:0E:C9', disk: sda, network_interface: ens18}
+        metal3:
+          ansible_host: 192.168.1.13
+          mac: 'BC:24:11:2D:0E:C9'
+          disk: sda
+          network_interface: ens18
