--- a/metal/inventories/prod.yml
+++ b/metal/inventories/prod.yml
@@ -1,6 +1,6 @@
 all:
   vars:
-    ansible_user: carlos
+    ansible_user: root
     ansible_ssh_private_key_file: /home/carlos/.ssh/id_ed25519
     control_plane_endpoint: 192.168.1.8
     load_balancer_ip_pool:
