--- a/metal/roles/automatic_upgrade/tasks/main.yml
+++ b/metal/roles/automatic_upgrade/tasks/main.yml
@@ -1,9 +1,17 @@
-- name: Install packages for automatic upgrade
+- name: Install packages for automatic upgrade Ubuntu/Debian 
   ansible.builtin.dnf:
     name:
       - dnf-automatic
       - dnf-utils
+  when: ansible_facts.pkg_mgr == "apt"
 
+- name: Install packages for automatic upgrade Fedora/CentOS/RHEL 
+  ansible.builtin.dnf:
+    name:
+      - dnf-automatic
+      - dnf-utils
+  when: ansible_facts.pkg_mgr == "dnf"
+  
 - name: Copy automatic upgrade config file
   ansible.builtin.copy:
     src: automatic.conf
