--- a/metal/roles/automatic_upgrade/tasks/main.yml
+++ b/metal/roles/automatic_upgrade/tasks/main.yml
@@ -5,6 +5,21 @@
     state: present
   when: ansible_facts.pkg_mgr == "apt"
 
+- name: Ensure unattended-upgrades is installed Ubuntu/Debian
+  apt:
+    name: unattended-upgrades
+    state: present
+  when: ansible_facts.pkg_mgr == "apt"
+
+- name: Enable unattended-upgrades Ubuntu/Debian
+  copy:
+    dest: /etc/apt/apt.conf.d/20auto-upgrades
+    content: |
+      APT::Periodic::Update-Package-Lists "1";
+      APT::Periodic::Unattended-Upgrade "1";
+  when: ansible_facts.pkg_mgr == "apt"
+
+
 - name: Install packages for automatic upgrade Fedora/CentOS/RHEL 
   ansible.builtin.dnf:
     name:
@@ -14,16 +29,16 @@
     use_backend: dnf4
   when: ansible_facts.pkg_mgr == "dnf"
 
-- name: Copy automatic upgrade config file
+- name: Copy automatic upgrade config file Fedora/CentOS/RHEL
   ansible.builtin.copy:
     src: automatic.conf
     dest: /etc/dnf/automatic.conf
     mode: 0644
-  
+  when: ansible_facts.pkg_mgr == "dnf"
 
-- name: Enable automatic upgrade service
+- name: Enable automatic upgrade service Fedora/CentOS/RHEL
   ansible.builtin.systemd:
     name: dnf-automatic.timer
     state: started
     enabled: true
-  
+  when: ansible_facts.pkg_mgr == "dnf"
