--- a/metal/inventories/prod.yml
+++ b/metal/inventories/prod.yml
@@ -10,24 +10,24 @@ metal:
   children:
     masters:
       hosts:
-        metal0:
+        pvekubenode1:
           ansible_host: 192.168.1.10
           mac: 'BC:24:11:1C:E3:C0'
           disk: sda
           network_interface: ens18
-        metal1:
+        pvekubenode3:
           ansible_host: 192.168.1.11
           mac: 'BC:24:11:EB:C2:7D'
           disk: sda
           network_interface: ens18
-        metal2:
+        pvekubenode2:
           ansible_host: 192.168.1.12
           mac: 'BC:24:11:F7:CC:B8'
           disk: sda
           network_interface: ens18
     workers:
       hosts:
-        metal3:
+        pvekubenode4:
           ansible_host: 192.168.1.13
           mac: 'BC:24:11:2D:0E:C9'
           disk: sda
