--- a/metal/roles/wake/tasks/main.yml
+++ b/metal/roles/wake/tasks/main.yml
@@ -3,4 +3,6 @@
     mac: "{{ mac }}"
   delegate_to: localhost
 
-
+- name: Wait for the machines to come online
+  ansible.builtin.wait_for_connection:
+    timeout: 600
